--- a/views/user/ordertracking.ejs
+++ b/views/user/ordertracking.ejs
@@ -9,12 +9,12 @@
 <div class="container mt-5 text-center"> <!-- Added 'text-center' class to center content -->
     <div class="row">
         <div class="col-12 col-md-10 hh-grayBox mx-auto text-center pt-4 pb-4">
-            <% if (order[0].status==='pending' ) { %>
+            <% if (order.status==='pending' ) { %>
                 <div class="row justify-content-between">
                     <div class="order-tracking completed">
                         <span class="is-complete"></span>
                         <p class=" bg-primary rounded px-3" style="color: aliceblue;">
-                            <%= order[0].updated.toLocaleString('en-US', { year: 'numeric' , month: 'short' ,
+                            <%= order.updated.toLocaleString('en-US', { year: 'numeric' , month: 'short' ,
                                 day: 'numeric' }) %><br>Ordered
                         </p>
                     </div>
@@ -31,7 +31,7 @@
                         <p class="text-dark">Delivered</p>
                     </div>
                 </div>
-            <% } else if (order[0].status==='processing' ) { %>
+            <% } else if (order.status==='processing' ) { %>
                 <!-- Adjusted alignment -->
                 <div class="row justify-content-between">
                     <div class="order-tracking completed">
@@ -41,7 +41,7 @@
                     <div class="order-tracking completed">
                         <span class="is-complete"></span>
                         <p class=" bg-primary rounded px-3" style="color: aliceblue;">
-                            <%= order[0].updated.toLocaleString('en-US', { year: 'numeric' , month: 'short' ,
+                            <%= order.updated.toLocaleString('en-US', { year: 'numeric' , month: 'short' ,
                                 day: 'numeric' }) %><br>Processing
                         </p>
                     </div>
@@ -54,7 +54,7 @@
                         <p class="text-dark">Delivered</p>
                     </div>
                 </div>
-            <% } else if (order[0].status==='shipped' ) { %>
+            <% } else if (order.status==='shipped' ) { %>
                 <!-- Adjusted alignment -->
                 <div class="row justify-content-between">
                     <div class="order-tracking completed">
@@ -68,7 +68,7 @@
                     <div class="order-tracking completed">
                         <span class="is-complete "></span>
                         <p class=" bg-primary rounded px-3" style="color: aliceblue;">
-                            <%= order[0].updated.toLocaleString('en-US', { year: 'numeric' , month: 'short'
+                            <%= order.updated.toLocaleString('en-US', { year: 'numeric' , month: 'short'
                                 , day: 'numeric' }) %><br>Shipped
                         </p>
                     </div>
@@ -77,7 +77,7 @@
                         <p class="text-dark">Delivered</p>
                     </div>
                 </div>
-            <% } else if (order[0].status==='delivered' ) { %>
+            <% } else if (order.status==='delivered' ) { %>
                 <!-- Adjusted alignment -->
                 <div class="row justify-content-between">
                     <div class="order-tracking completed">
@@ -95,12 +95,12 @@
                     <div class="order-tracking completed">
                         <span class="is-complete btn-block"></span>
                         <p class=" bg-primary rounded px-3" style="color: aliceblue;">
-                            <%= order[0].updated.toLocaleString('en-US', { year: 'numeric' ,
+                            <%= order.updated.toLocaleString('en-US', { year: 'numeric' ,
                                 month: 'short' , day: 'numeric' }) %><br>Delivered
                         </p>
                     </div>
                 </div>
-            <% } else if (order[0].status==='Cancelled' ) { %>
+            <% } else if (order.status==='Cancelled' ) { %>
                 <!-- Adjusted alignment -->
                 <div class="row justify-content-between">
                     <div class="order-tracking completed cancelled">
@@ -118,7 +118,7 @@
                     <div class="order-tracking completed cancelledd">
                         <span class="is-complete btn-block"></span>
                         <p class=" bg-primary rounded px-3" style="color: aliceblue;">
-                            <%= order[0].updated.toLocaleString('en-US', { year: 'numeric' ,
+                            <%= order.updated.toLocaleString('en-US', { year: 'numeric' ,
                                 month: 'short' , day: 'numeric' }) %><br>Cancelled
                         </p>
                     </div>
@@ -129,12 +129,12 @@
         </div>
     </div>
 
-    <h5 class="text-dark">Order ID: <%= order[0].orderId %>
+    <h5 class="text-dark">Order ID: <%= order.orderId %>
     </h5>
-    <p class="text-dark">Delivery Address: <%= order[0].address[0].save_as %>,
-        <%= order[0].address[0].housename %>,
-        <%= order[0].address[0].city %>,
-        <%= order[0].address[0].pincode %>
+    <p class="text-dark">Delivery Address: <%= order.address[0].save_as %>,
+        <%= order.address[0].housename %>,
+        <%= order.address[0].city %>,
+        <%= order.address[0].pincode %>
     </p>
     <table class="table">
         <thead>
@@ -148,7 +148,7 @@
             </tr>
         </thead>
         <tbody>
-            <% order[0].items.forEach(item=> { %>
+            <% order.items.forEach(item=> { %>
                 <tr>
                     <td class="text-dark">
                         <%= item.productId.name %>
@@ -166,7 +166,7 @@
                         <%= item.quantity * item.price %>
                     </td>
                     <td class="text-dark">
-                        <%= order[0].payment %>
+                        <%= order.payment %>
                     </td>
                 </tr>
             <% }); %>
@@ -176,10 +176,17 @@
                 <td class="text-dark"></td>
                 <td class="text-dark">Total Amount </td>
                 <td class="text-dark">
-                    <%= order[0].amount %>
+                    <%= order.amount %>
                 </td>
             </tr>
         </tbody>
     </table>
-</div> <!-- Closed the container -->
+</div> 
+<% if(order.status=="delivered"){ %>
+    <div class="text-center mt-4">
+        <a href="/downloadInvoice/<%= order.orderId %>" class="btn btn-success btn-lg" download>Download Invoice</a>
+      </div>
+      
+    <% } %>
+<!-- Closed the container -->
 <%- include ("footer.ejs") %>
