--- a/views/user/header.ejs
+++ b/views/user/header.ejs
@@ -25,8 +25,20 @@
   <link rel="stylesheet" href="../static/css/aos.css">
 
   <link rel="stylesheet" href="../static/css/style.css">
-  
 
+  <style>
+      .custom-select {
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      background-image: url('../../static/images/arrow_drop_down_FILL0_wght700_GRAD200_opsz20.svg');
+      background-repeat: no-repeat;
+      background-position: right 8px center;
+      padding-right: 30px;
+      border: none; 
+      background-size: 18px; 
+  }
+  </style>
 </head>
 
 <body>
@@ -37,7 +49,7 @@
           <div class="row align-items-center">
 
             <div class="col-6 col-md-4 order-2 order-md-1 site-search-icon text-left">
-              <form action="/shop?search" class="site-block-top-search">
+              <form action="/shop" method="get" class="site-block-top-search">
                 <span class="icon icon-search2"></span>
                 <input type="text" name="search" class="form-control border-1" placeholder="Search">
               </form>
@@ -72,16 +84,18 @@
         <div class="container">
           <ul class="site-menu js-clone-nav d-none d-md-block">
             <li><a href="/">Home</a></li>
-            <li class="has-children">
-              <a href="#">Categories</a>
-              <ul class="dropdown">
-                
+            <li class="has-children " >
+              <select id="categorySelect" class="custom-select bg-light">
+                <option value="" selected disabled>Category</option>
                 <% categories.forEach(category => { %>
-                  <li><a href="/shop?category=<%= category._id %>"><%= category.name %></a></li>
-              <% }); %>
-              
-              </ul>
-            </li>
+                    <option value="<%= category._id %>"><%= category.name %></option>
+                <% }); %>
+            </select>
+            
+          </li>
+          
+            
+
             <li><a href="/shop">Shop</a></li>
             <li><a href="/shop?sortBy=newArrivals">New Arrivals</a></li>
             <li><a href="/contact">Contact</a></li>
@@ -89,3 +103,4 @@
         </div>
       </nav>
     </header>
+   
