--- a/views/user/wallet.ejs
+++ b/views/user/wallet.ejs
@@ -1,49 +1,60 @@
 <%- include ("header.ejs") %>
-<div class="bg-light py-3">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 mb-0"><a href="/profile">User</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">Wallet</strong></div>
-      </div>
-    </div>
+<style>
+    .border-success {
+    border-color: #049827 !important; /* Green border color */
+}
+
+.border-danger{
+    border-color: #db0116 !important; /* Red border color */
+}
+
+</style>
+    <div class="bg-light py-3">
+        <div class="container">
+        <div class="row">
+            <div class="col-md-12 mb-0">
+            <a href="/profile">User</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">Wallet</strong>
+            </div>
+        </div>
+        </div>
     </div>
     <div class="container mt-5">
         <h1 class="mb-4 text-center">Wallet History</h1>
-        <h4 class="mb-4">Balance: <%= user.wallet %></h4>
+        <h4 class="mb-4 text-center">Balance: ₹<%= user.wallet %></h4>
         <form id="Form" class="mb-4">
-            <div class="input-group">
-                <input type="number" id="Amount" name="Amount" class="form-control" placeholder="Enter Amount">
-                <button class="btn btn-primary" onclick="RazorpayWallet(event)">Add To Wallet</button>
-            </div>
+        <div class="input-group">
+            <input type="number" id="Amount" name="Amount" class="form-control" placeholder="Enter Amount" min="0">
+            <button class="btn btn-primary" onclick="RazorpayWallet(event)">Add To Wallet</button>
+        </div>
         </form>
-        <% if(wallet && wallet.history.length > 0) { %>
+        <% if(wallet && wallet.length > 0) { %>
         <div class="row">
-            <% wallet.history.forEach((entry, index) => { %>
-            <div class="col-md-6 mb-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title text-<%= entry.transaction === 'Credited' ? 'success' : 'danger'; %>">
-                            <%= entry.transaction %>
-                        </h5>
-
-                        <p class="card-text">Reason: <%= entry.reason %></p>
-
-                        <p class="card-text">Amount: <%= entry.amount %></p>
-
-                        <p class="card-text">Date: <%= new Date(entry.date).toLocaleString() %></p>
-                    </div>
-                </div>
+        <% wallet.forEach((entry, index) => { %>
+        <div class="col-md-6 mb-4">
+            <div class="card  <%= entry.history.transaction === 'Credited' ? 'border border-success' : 'border border-danger'; %>">
+            <div class="card-body">
+                <h5 class="card-title font-weight-bold  <%= entry.history.transaction === 'Credited' ? 'text-success' : 'text-danger'; %>">
+                    <%= entry.history.transaction    %>
+                </h5>
+                
+                
+                <p class="card-text text-black">Reason: <%= entry.history.reason %></p>
+                <p class="card-text text-black">Amount: ₹<%= entry.history.amount %></p>
+                <p class="card-text text-black">Date: <%= new Date(entry.history.date).toLocaleString() %></p>
             </div>
-            <% if((index + 1) % 2 === 0 && (index + 1) !== wallet.history.length) { %>
+            </div>
+        </div>
+        <% if((index + 1) % 2 === 0 && (index + 1) !== wallet.length) { %>
         </div>
         <div class="row">
-            <% } %>
-            <% }); %>
+        <% } %>
+        <% }); %>
         </div>
         <% } else { %>
         <p class="text-center">No history available.</p>
         <% } %>
     </div>
-    
+        
 
     <script>
         async function RazorpayWallet() {
