--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -20,40 +20,40 @@
         <button onclick="openModal()" class="d-block mx-auto mb-3">
           <h2>Available Coupons</h2>
         </button>
-  
+
         <!-- Modal -->
         <div id="couponModal" class="modal">
           <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
             <ul>
               <% if(availableCoupons.length> 0) { %>
-              <% availableCoupons.forEach(coupon=> { %>
-              <li>
-                <div class="row">
-                  <div class="col-3">
-                    <%= coupon.couponCode %> &nbsp;&nbsp;
-                    <% if (coupon.type==="percentageDiscount" ) { %>
-                    <p>
-                      <%= coupon.discount %>% off on Rs.<%= coupon.minimumPrice %> purchase (Maximum Redeemable:
-                      <%= coupon.maxRedeem %>)
-                    </p><br>
+                <% availableCoupons.forEach(coupon=> { %>
+                  <li>
+                    <div class="row">
+                      <div class="col-3">
+                        <%= coupon.couponCode %> &nbsp;&nbsp;
+                          <% if (coupon.type==="percentageDiscount" ) { %>
+                            <p>
+                              <%= coupon.discount %>% off on Rs.<%= coupon.minimumPrice %> purchase (Maximum Redeemable:
+                                  <%= coupon.maxRedeem %>)
+                            </p><br>
+                            <% } else { %>
+                              <p>Flat Rs. <%= coupon.discount %> off on <%= coupon.minimumPrice %> purchase</p><br>
+                              <% } %>
+                      </div>
+                      <div class="col-3 mt-2">
+                        <button onclick="copyToClipboard('<%= coupon.couponCode %>')">Copy Code</button>
+                      </div>
+                    </div>
+                  </li>
+                  <% }); %>
                     <% } else { %>
-                    <p>Flat Rs. <%= coupon.discount %> off on <%= coupon.minimumPrice %> purchase</p><br>
-                    <% } %>
-                  </div>
-                  <div class="col-3 mt-2">
-                    <button onclick="copyToClipboard('<%= coupon.couponCode %>')">Copy Code</button>
-                  </div>
-                </div>
-              </li>
-              <% }); %>
-              <% } else { %>
-              <p>No coupons available</p>
-              <% } %>
+                      <p>No coupons available</p>
+                      <% } %>
             </ul>
           </div>
         </div>
-  
+
         <!-- Coupon code input form -->
         <form>
           <label for="c_code" class="text-black mb-3">Enter your coupon code if you have one</label>
@@ -61,7 +61,8 @@
             <input type="text" class="form-control" id="c_code" placeholder="Coupon Code" aria-label="Coupon Code"
               aria-describedby="button-addon2">
             <div class="input-group-append">
-              <button class="btn btn-black btn-sm" type="button" id="button-addon2" onclick="couponApply()">Apply</button>
+              <button class="btn btn-black btn-sm" type="button" id="button-addon2"
+                onclick="couponApply()">Apply</button>
             </div>
             <div>
               <button style="color: black;border: solid black;margin-left: 3px;" class="btn btn-white-outline btn-sm"
@@ -73,10 +74,10 @@
     </div>
   </div>
 
-  
-  
-  
-  
+
+
+
+
   <form id="orderform">
     <div class="site-section">
       <div class="container">
@@ -159,7 +160,9 @@
                           <input type="hidden" id="amount" name="amount" value="<%= data.total %>">
                           <input type="hidden" id="wallet" name="wallet" value="0" />
                           <td class="text-black font-weight-bold">Cart Subtotal:</td>
-                          <td class="text-black font-weight-bold">₹<span id="subt"><%= data.total %></span>
+                          <td class="text-black font-weight-bold">₹<span id="subt">
+                              <%= data.total %>
+                            </span>
                           </td>
                         </tr>
                         <tr>
@@ -247,7 +250,7 @@
 
       document.body.removeChild(tempInput);
 
-      
+
     }
 
     document.addEventListener('DOMContentLoaded', function () {
@@ -337,15 +340,17 @@
         };
         var rzp1 = new Razorpay(options);
         rzp1.on("payment.failed", function (response) {
-          alert(response.error.code);
-          alert(response.error.description);
-          alert(response.error.source);
-          alert(response.error.step);
-          alert(response.error.reason);
-          alert(response.error.metadata.payment_id);
+          Swal.fire({
+            title: 'Payment Failed',
+            text: 'There was an issue processing your payment.',
+            icon: 'error',
+            confirmButtonText: 'OK'
+          }).then(() => {
+            window.location.href = '/paymentFailure';
+          });
         });
+        
         rzp1.open();
-
         event.preventDefault();
 
         var orderId;
@@ -370,11 +375,28 @@
         });
       } else if (selectedPayment.value == "cashOnDelivery") {
         console.log("Cash on Delivery selected");
+        const amt = document.getElementById("total").textContent.trim();
+        const amount = parseFloat(amt.replace(/[^0-9.-]/g, ''));
+        console.log(amount);
+        if (amount > 1000) {
+          Swal.fire({
+            title: 'COD Not Available',
+            text: "Cash on Delivery Not available for order above ₹1000.",
+            icon: "error",
+            confirmButtonText: "OK",
+            customClass: {
+              title: "text-danger",
+              popup: "swal2-popup-custom",
+              confirmButton: "btn btn-danger",
+            },
+            showCancelButton: false,
+            showCloseButton: true,
+            showLoaderOnConfirm: false,
+          });
+        }
         document.getElementById("orderform").action = "/order";
         document.getElementById("orderform").method = "post";
         document.getElementById("orderform").submit();
-        const amt = document.getElementById("total").textContent.trim();
-        const amount = parseFloat(amt.replace(/[^0-9.-]/g, ''));
         document.getElementById("total").innerText = `${amount}`;
         document.getElementById("amount").value = `${amount}`;
       } else if (selectedPayment.value == 'wallet') {
@@ -401,7 +423,7 @@
           } else {
             const discountRow = document.querySelector('.wallet-row');
             discountRow.style.display = '';
-            document.getElementById("walletReduce").innerText=`${data.amount}`
+            document.getElementById("walletReduce").innerText = `${data.amount}`
             document.getElementById("amount").value = `${amount}`;
             const amount1 = document.getElementById("amount").value;
             console.log(amount1);
@@ -437,127 +459,127 @@
     }
   </script>
 
-<script>
+  <script>
 
-  function couponApply() {
-    const couponCode = document.getElementById('c_code').value;
-    const subtotal = document.getElementById('subt').innerText
+    function couponApply() {
+      const couponCode = document.getElementById('c_code').value;
+      const subtotal = document.getElementById('subt').innerText
 
-    fetch('/applyCoupon', {
-      method: "POST",
-      headers: {
-        'Content-Type': "application/json"
-      },
-      body: JSON.stringify({ couponCode, subtotal })
-    })
-      .then(response => response.json())
-      .then(data => {
-        if (data.success) {
-          Swal.fire({
-            text: "coupon applied",
-            icon: 'success',
-            confirmButtonText: 'OK',
-            customClass: {
-              title: 'text-danger',
-              popup: 'swal2-popup-custom',
-              confirmButton: 'btn btn-danger'
-            },
-            showCancelButton: false,
-            showCloseButton: true,
-            showLoaderOnConfirm: false,
-            timer: 3000
-          });
-          console.log("ivideumethi")
-          document.getElementById('dicprice').innerText = "-" + data.dicprice
-          document.getElementById('total').innerText = `${data.price}`
-          document.getElementById('amount').value = `${data.price}`
-
-
-
-        } else {
-          Swal.fire({
-            text: data.message,
-            icon: 'error',
-            confirmButtonText: 'OK',
-            customClass: {
-              title: 'text-danger',
-              popup: 'swal2-popup-custom',
-              confirmButton: 'btn btn-danger'
-            },
-            showCancelButton: false,
-            showCloseButton: true,
-            showLoaderOnConfirm: false,
-            timer: 3000
-          });
-        }
+      fetch('/applyCoupon', {
+        method: "POST",
+        headers: {
+          'Content-Type': "application/json"
+        },
+        body: JSON.stringify({ couponCode, subtotal })
       })
-      .catch(error => {
-        console.error('Error applying coupon:', error);
-        alert('An error occurred while applying the coupon. Please try again.');
-      });
-  }
-
-  function couponRevoke() {
-
-    const couponCode = document.getElementById('c_code').value;
-    const subtotal = document.getElementById('subt').innerText
-
-    fetch('/revokeCoupon', {
-      method: "POST",
-      headers: {
-        'Content-Type': "application/json"
-      },
-      body: JSON.stringify({ couponCode, subtotal })
-    })
-      .then(response => response.json())
-      .then(data => {
-        if (data.success) {
-          Swal.fire({
-            text: "coupon revoked",
-            icon: 'success',
-            confirmButtonText: 'OK',
-            customClass: {
-              title: 'text-danger',
-              popup: 'swal2-popup-custom',
-              confirmButton: 'btn btn-danger'
-            },
-            showCancelButton: false,
-            showCloseButton: true,
-            showLoaderOnConfirm: false,
-            timer: 3000
-          });
-          document.getElementById('dicprice').innerText = 0
-          document.getElementById('total').innerText = `${data.price}`
-          document.getElementById('amount').value =`${data.price}`
-          document.getElementById('c_code').value = ""
+        .then(response => response.json())
+        .then(data => {
+          if (data.success) {
+            Swal.fire({
+              text: "coupon applied",
+              icon: 'success',
+              confirmButtonText: 'OK',
+              customClass: {
+                title: 'text-danger',
+                popup: 'swal2-popup-custom',
+                confirmButton: 'btn btn-danger'
+              },
+              showCancelButton: false,
+              showCloseButton: true,
+              showLoaderOnConfirm: false,
+              timer: 3000
+            });
+            console.log("ivideumethi")
+            document.getElementById('dicprice').innerText = "-" + data.dicprice
+            document.getElementById('total').innerText = `${data.price}`
+            document.getElementById('amount').value = `${data.price}`
 
 
 
+          } else {
+            Swal.fire({
+              text: data.message,
+              icon: 'error',
+              confirmButtonText: 'OK',
+              customClass: {
+                title: 'text-danger',
+                popup: 'swal2-popup-custom',
+                confirmButton: 'btn btn-danger'
+              },
+              showCancelButton: false,
+              showCloseButton: true,
+              showLoaderOnConfirm: false,
+              timer: 3000
+            });
+          }
+        })
+        .catch(error => {
+          console.error('Error applying coupon:', error);
+          alert('An error occurred while applying the coupon. Please try again.');
+        });
+    }
 
-        } else {
-          Swal.fire({
-            text: data.message,
-            icon: 'error',
-            confirmButtonText: 'OK',
-            customClass: {
-              title: 'text-danger',
-              popup: 'swal2-popup-custom',
-              confirmButton: 'btn btn-danger'
-            },
-            showCancelButton: false,
-            showCloseButton: true,
-            showLoaderOnConfirm: false,
-            timer: 3000
-          });
-        }
+    function couponRevoke() {
+
+      const couponCode = document.getElementById('c_code').value;
+      const subtotal = document.getElementById('subt').innerText
+
+      fetch('/revokeCoupon', {
+        method: "POST",
+        headers: {
+          'Content-Type': "application/json"
+        },
+        body: JSON.stringify({ couponCode, subtotal })
       })
-      .catch(error => {
-        console.error('Error applying coupon:', error);
-        alert('An error occurred while applying the coupon. Please try again.');
-      });
-  }
+        .then(response => response.json())
+        .then(data => {
+          if (data.success) {
+            Swal.fire({
+              text: "coupon revoked",
+              icon: 'success',
+              confirmButtonText: 'OK',
+              customClass: {
+                title: 'text-danger',
+                popup: 'swal2-popup-custom',
+                confirmButton: 'btn btn-danger'
+              },
+              showCancelButton: false,
+              showCloseButton: true,
+              showLoaderOnConfirm: false,
+              timer: 3000
+            });
+            document.getElementById('dicprice').innerText = 0
+            document.getElementById('total').innerText = `${data.price}`
+            document.getElementById('amount').value = `${data.price}`
+            document.getElementById('c_code').value = ""
 
 
-</script>
+
+
+          } else {
+            Swal.fire({
+              text: data.message,
+              icon: 'error',
+              confirmButtonText: 'OK',
+              customClass: {
+                title: 'text-danger',
+                popup: 'swal2-popup-custom',
+                confirmButton: 'btn btn-danger'
+              },
+              showCancelButton: false,
+              showCloseButton: true,
+              showLoaderOnConfirm: false,
+              timer: 3000
+            });
+          }
+        })
+        .catch(error => {
+          console.error('Error applying coupon:', error);
+          alert('An error occurred while applying the coupon. Please try again.');
+        });
+    }
+
+
+  </script>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <%- include ("footer.ejs") %>
