Best Selling category baaki hai!

--- a/views/admin/adminHead.ejs
+++ b/views/admin/adminHead.ejs
@@ -96,7 +96,15 @@
                 <span>
                   <i class="ti ti-layout-dashboard"></i>
                 </span>
-                <span class="hide-menu">Discounts</span>
+                <span class="hide-menu">Coupons</span>
+              </a>
+            </li>
+            <li class="sidebar-item">
+              <a class="sidebar-link" href="/admin/best" aria-expanded="false">
+                <span>
+                  <i class="ti ti-layout-dashboard"></i>
+                </span>
+                <span class="hide-menu">Best Items</span>
               </a>
             </li>
           </ul>
