Best products also Khatam !

--- a/views/admin/adminHead.ejs
+++ b/views/admin/adminHead.ejs
@@ -104,7 +104,7 @@
                 <span>
                   <i class="ti ti-layout-dashboard"></i>
                 </span>
-                <span class="hide-menu">Best Items</span>
+                <span class="hide-menu">Best / Worst</span>
               </a>
             </li>
           </ul>
