start with setting otp page

--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -58,18 +58,13 @@
         </div>
         <div class="col-md-5 ml-auto">
           <div class="p-4 border mb-3">
-            <span class="d-block text-primary h6 text-uppercase">New York</span>
-            <p class="mb-0">203 Fake St. Mountain View, San Francisco, California, USA</p>
+            <span class="d-block text-primary h6 text-uppercase">Bengaluru</span>
+            <p class="mb-0">13th Cross, Madiwala, Bengaluru</p>
           </div>
           <div class="p-4 border mb-3">
-            <span class="d-block text-primary h6 text-uppercase">London</span>
-            <p class="mb-0">203 Fake St. Mountain View, San Francisco, California, USA</p>
+            <span class="d-block text-primary h6 text-uppercase">Kannur</span>
+            <p class="mb-0">Fort Road, Near SBI, Kannur, 670001</p>
           </div>
-          <div class="p-4 border mb-3">
-            <span class="d-block text-primary h6 text-uppercase">Canada</span>
-            <p class="mb-0">203 Fake St. Mountain View, San Francisco, California, USA</p>
-          </div>
-
         </div>
       </div>
     </div>
