--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -56,7 +56,7 @@
                                 <div id="passwordError"></div>
                             </div>
                             <button type="submit" class="btn btn-primary w-100">Login</button>
-                            <a href="/forgotPassword" class="d-block mt-2">Forgot Password</a>
+                            <a href="/forgotPassword" class="d-block mt-2"><u>Forgot Password</u></a>
                         </form>
                         <div class="mt-3">
                             <% if(expressFlash.invalidpassword && expressFlash.invalidpassword.length > 0) { %>
